# Airlock-V1

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py  index.html
docs/: architecture.md
examples/: rogue_agent_demo.py
launch/: DEMO_SCRIPT.md  LINKEDIN.md  METRICS.md  PROJECT_BRIEF.md
launch/assets/: README.md
policies/: example.yaml
src/airlock/: __init__.py  approvals.py  core.py  decisions.py  ledger.py  policy.py
src/airlock/integrations/: __init__.py  langchain.py  mcp.py
tests/: test_policy.py
