[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airlock-agents"
version = "0.1.0"
description = "The action firewall for AI agents — policy-as-code, human-in-the-loop, and a full ledger at the boundary where a decision becomes an action."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "APK99-dot" }]
keywords = ["ai", "agents", "guardrails", "mcp", "governance", "llm", "security", "agentic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dashboard = ["fastapi>=0.110", "uvicorn>=0.29"]
langchain = ["langchain-core>=0.2"]
dev = ["pytest>=8.0", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/APK99-dot/Airlock"
Issues = "https://github.com/APK99-dot/Airlock/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/airlock"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
